[tool.poetry]
name = "shortener"
version = "0.1.0"
description = ""
authors = ["astsu <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
SQLAlchemy = "^1.4.36"
databases = {extras = ["postgresql"], version = "^0.5.5"}
alembic = "^1.7.7"
psycopg2-binary = "^2.9.3"
pydantic = "^1.9.1"
uvicorn = "^0.18.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
